# wrapdb

subprojects/: freedom-e-sdk.wrap
subprojects/packagefiles/freedom-e-sdk/: meson.build  meson_options.txt
subprojects/packagefiles/freedom-e-sdk/freedom-metal/: meson.build
subprojects/packagefiles/freedom-e-sdk/freedom-metal/gloss/: meson.build
subprojects/packagefiles/freedom-e-sdk/freedom-metal/metal/: meson.build
subprojects/packagefiles/freedom-e-sdk/freedom-metal/metal/drivers/: meson.build
