install_headers(
    files(
        'fixed-clock.h',
        'fixed-factor-clock.h',
        'riscv_clint0.h',
        'riscv_cpu.h',
        'riscv_plic0.h',
        'sifive_buserror0.h',
        'sifive_ccache0.h',
        'sifive_clic0.h',
        'sifive_fe310-g000_hfrosc.h',
        'sifive_fe310-g000_hfxosc.h',
        'sifive_fe310-g000_lfrosc.h',
        'sifive_fe310-g000_pll.h',
        'sifive_fe310-g000_prci.h',
        'sifive_global-external-interrupts0.h',
        'sifive_gpio0.h',
        'sifive_gpio-buttons.h',
        'sifive_gpio-leds.h',
        'sifive_gpio-switches.h',
        'sifive_i2c0.h',
        'sifive_l2pf0.h',
        'sifive_local-external-interrupts0.h',
        'sifive_pwm0.h',
        'sifive_rtc0.h',
        'sifive_spi0.h',
        'sifive_test0.h',
        'sifive_trace.h',
        'sifive_uart0.h',
        'sifive_wdog0.h',
        'ucb_htif0.h'
    ),
    join_paths(install_incdir, 'metal', 'drivers')
)
